# DRL-nmpc-ros2

./: README.md
pytorch_models/: td3_velodyne_actor.pth  td3_velodyne_critic.pth
results/: td3_velodyne.npy
runs/: events.out.tfevents.1753200086.belabed.64443.0  events.out.tfevents.1753201474.belabed.75099.0  events.out.tfevents.1753202914.belabed.85269.0
runs/Jul22_17-01-27_belabed/: events.out.tfevents.1753200087.belabed.64443.1
runs/Jul22_17-24-36_belabed/: events.out.tfevents.1753201476.belabed.75099.1
runs/Jul22_17-48-35_belabed/: events.out.tfevents.1753202915.belabed.85269.1
src/: README.md
src/nmpc/: CMakeLists.txt  package.xml
src/td3/: CMakeLists.txt  package.xml
src/td3/launch/: gz_robot.launch.py  pioneer3dx.rviz  robot_state_publisher.launch.py  train_td3.launch.py
src/td3/models/td_robot/: td_robot.sdf
src/td3/scripts/: TD3.py  replay_buffer.py  ros2_env.py  train_robot.py
src/td3/urdf/: td_robot.urdf
src/td3/worlds/: Mshape.world  TD3.world  boxworld1.world  model.world  td3.world  world01.world  world_100.world  world_120.world  world_163.world  world_180.world  world_250_modified.world  world_285.world  world_295.world  world_340.world  world_5.world  world_50.world  world_62.world  world_97.world  world_98.world  world_99.world
src/velodyne_simulator/velodyne_description/: CMakeLists.txt
src/velodyne_simulator/velodyne_description/launch/: example-launch.py
src/velodyne_simulator/velodyne_gazebo_plugins/: CMakeLists.txt
